--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,8 @@
   <footer class="main" id="f1">
     <a href="http://es.wikipedia.org/wiki/Quiz">
       ¿Que es un Quiz?</a>
+	<a href="https://github.com/igoneperez/quiz">
+      Mi proyecto en GitHub</a> 
   </footer>
 </div>
 </body> 
