Ejercicio Obligatorio Modulo7

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,7 +34,7 @@
     <a href="http://es.wikipedia.org/wiki/Quiz">
       ¿Que es un Quiz?</a>
 	<br>
-	<a href="https://github.com/igoneperez/quiz" target="_blank">
+	<a href="https://github.com/igoneperez" target="_blank">
       Mi proyecto en GitHub</a> 
   </footer>
 </div>
