--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -8,13 +8,10 @@
     <% if (quizes.length > 0) { %>
     <hr/>
 
-    <table>
-    <% var i; for (i=0; i < quizes.length; i++) { %>
-    	<tr>
-    		<td>
-    			<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
-			</td>
-    	</tr>
-    <% } %>
-    </table>
-    <% } %>
+	<table>
+<% var i; for (i=0; i < quizes.length; i++) { %>        
+   <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
+<% } %>
+</table><p>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<% } %>
