Validacion de entradas

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,7 +26,16 @@
 	<span><a href="/author">Autor</a></span>
   </nav>
 
-  <section class="main" id="s1">
+ <section class="main" id="s1">
+    <% if (errors.length) { %>
+      <span id='ErrorMsgs'>
+        Corregir errores:<br/>
+        <% for (var i in errors) { %>
+           <span> <%= errors[i].message %> </span><br/>
+        <% } %>
+      </span>
+    <% } %>
+
     <div><%- body %></div>
   </section>
 
