--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,11 +7,15 @@
 
     <% if (quizes.length > 0) { %>
     <hr/>
-
-	<table>
-<% var i; for (i=0; i < quizes.length; i++) { %>        
-   <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
-<% } %>
-</table><p>
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+	
+<table>
+  <% var i; for (i=0; i < quizes.length; i++) { %>        
+    <tr>
+      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+      <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+    </tr> 
+  <% } %>
+</table>
+<p/>
+<a href="/quizes/new"><button>Crear pregunta</button></a>
 <% } %>
