--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,7 @@
 
  <section class="main" id="s1">
     <% if (errors.length) { %>
-      <span id='ErrorMsgs'>
+      <span id="ErrorMsgs">
         Corregir errores:<br/>
         <% for (var i in errors) { %>
            <span> <%= errors[i].message %> </span><br/>
@@ -40,7 +40,7 @@
   </section>
 
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
+    <a href="http://es.wikipedia.org/wiki/Quiz" target="_blank">
       ¿Que es un Quiz?</a>
 	<br>
 	<a href="https://github.com/igoneperez" target="_blank">
