--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,7 @@ footer               { background: #eee; text-align: center;}
 nav span             { margin: 0px 10px 0px 0px;}
 
 #ErrorMsgs           { color: #f61; font-size: smaler}
+.right 				 {float: right;} 
 
 span.capitalize {
   text-transform: capitalize;
