--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,12 +1,27 @@
-<form method="get" action="/quizes/<%= quiz.id %>/answer">        
-  <%= quiz.pregunta %> <p>
-  <input type="text" name="respuesta" value="Respuesta"/>
-  <input type="submit" value="Enviar">
+<form method="get" action="/quizes/<%= quiz.id %>/answer">
+  <p>Pregunta: <%= quiz.pregunta %></p>
+  <input type="text" name="respuesta" value="Respuesta" />
+  <input type="submit" name="submit" value="Enviar" />
 </form>
 
-<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
-
-<p><strong>Comentarios:</strong></p>
-<%for(index in quiz.Comments){%>
-	<p>- <%=quiz.Comments[index].texto%></p>
-<%}%>
+ <p><a href='/quizes/<%= quiz.id %>/comments/new'><input type='button' value='Nuevo comentario'/></a></p>
+    <p><strong>Comentarios:</strong></p>
+<%  var n = 0;
+    for (index in quiz.Comments) {
+      var mostrar = (quiz.Comments[index].publicado || session.user);
+      if (!mostrar) continue;
+      var conBoton = (session.user && !quiz.Comments[index].publicado);
+      if (conBoton) { %>
+    <form class='comentario' method='post' action='/quizes/<%= quiz.id %>/comments/<%= quiz.Comments[index].id %>/publish'>
+<%     } else { %>
+    <p class='comentario'>
+        <span class='orden'><%= ++n %></span>
+<%     } %>
+        <%= quiz.Comments[index].texto %>
+<%     if (conBoton) { %>
+        <input type='submit' value='Publicar'/>
+    </form>
+<%     } else { %>
+    </p>
+<%     }
+    } %>
