Ejercicio Opcional Modulo9: Parte2

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,7 @@ nav span             { margin: 0px 10px 0px 0px;}
 
 #ErrorMsgs           { color: #f61; font-size: smaler}
 .right 				 {float: right;} 
+ul { list-style-position: inside; }
 
 span.capitalize {
   text-transform: capitalize;
